--- a/style/style.css
+++ b/style/style.css
@@ -66,10 +66,10 @@ body{
 .dev-container{
     width: 1140px;
     height: 1050px;
-    border: 4px solid rgb(94, 255, 0);
     margin: 0 auto;
     background: rgba(13, 19, 33, 0.02);
     padding: 80px 97px 80px 97px;
+    margin-bottom: 50px;
 }
 .dev-content{
     display: flex;
@@ -154,6 +154,32 @@ body{
 }
 
 
+/* Insperation sectio starts */
+
+.insperation-container{
+    width: 1140px;
+    height: 550px;
+    margin: 0 auto;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    padding: 80px 97px 80px 97px;
+    
+}
+.insperation-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.vedio-url{
+    border-radius: 16px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    margin-top: 40px; 
+}
+
 
 /*......................Footer Section Style Starts.....................*/
 
@@ -173,7 +199,7 @@ body{
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 300px;
 }
 .footer-heading{
     color: rgb(13, 19, 33);
