--- a/style/style.css
+++ b/style/style.css
@@ -291,7 +291,6 @@ learn-btn{
 .support-container{
     width: 1140px;
     height: 313px;
-    border: 3px solid rgb(137, 225, 65);
     margin: 0 auto;
 }
 
@@ -304,12 +303,14 @@ learn-btn{
     background-position: center;
     background-repeat: no-repeat;
     padding: 64px 48px 64px 48px;
+    background-color: rgb(0,0,0,0.5);
+    background-blend-mode: overlay;
 }
 
 .support-heading{
     color: rgb(255, 255, 255);
     font-family: Azeret Mono;
-    font-size: 38px;
+    font-size: 32px;
     font-weight: 700;
     line-height: 36px;
     text-align: center;
@@ -321,14 +322,19 @@ learn-btn{
     font-weight: 400;
     line-height: 26px;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    opacity: 0.7;
+
 }
+
+
 
 .support-input{
     width: 548px;
     height: 55;
-    border: 1px solid rgba(13, 19, 33, 0.15);
+    border: none;
+    outline: none;
     border-radius: 8px;
     background: rgb(255, 255, 255);
     padding: 19px 20px 19px 20px;
@@ -336,11 +342,11 @@ learn-btn{
 }
 
 .support-btn{
-    border: 1px solid rgba(13, 19, 33, 0.15);
     border-radius: 8px;
     background: rgb(255, 255, 255);
     padding: 19px 20px 19px 20px;
-    
+    border: none;
+    outline: none;
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
     font-size: 20px;
